--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -117,7 +117,7 @@
             </style>
             <div class="card text-white bg-black mb-4" style="max-width: 15rem; max-height: 9rem;">
                 <div class="card-header">
-                    <div class="">{{post.posted | timesince}}</div>
+                    <div class="">{{post.posted | timesince}} ago</div>
                     <div class="">
                         {% if request.user == post.poster %}
                         <span>
