--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -66,11 +66,13 @@
             <p style="font-size: large; width: max-content;" class="bg-dark p-1">As an administrator, you get to:</p>
             <ul class="text-white" style="text-align: left;">
                 <li style="font-size: small;">You can add residents to the neighbourhood map(click to get latitude and
-                    longitude first and add resident's home location accordingly) - The login credentials will be
-                    <strong class="bg-white p-1 text-redx">auto</strong>-generated and sent to the added resident
-                    through the <strong class="bg-white p-1 text-redx">Email</strong> entered</li>
+                    longitude first and add resident's home location accordingly) - The <strong class="text-redx p-1">login</strong> credentials will be
+                    <strong class="text-redx p-1">auto-generated</strong> and sent to the added resident
+                    through the <strong class="text-redx p-1">Email</strong> entered</li>
                 <li style="font-size: small;">You can add social services to the neighbourhood map</li>
                 <li style="font-size: small;">You can send alerts to the residents</li>
+                <li style="font-size: small;">You can delete any post incase it doesn't meet the set standards</li>                
+                <li style="font-size: small;"></i> You can edit or delete the neighbourhood</li>
             </ul>
             <p style="font-size: large; width: max-content;" class="bg-dark p-1">Basic Map Instructions</p>
             <ul style="text-align: left;">
