--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -75,7 +75,7 @@
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Click on a marker to get more
                     details</li>
                 <li style="font-size: small; list-style: upper-roman;" class="text-white">Hover on the lines to see the
-                    distance from your <strong class="bg-white p-1 text-redx">home</strong> to a given place in the
+                    distance from your <strong class="p-1 text-redx">home</strong> to a given place in the
                     neighbourhood </li>
                 <h5>MAP KEY</h5>
                 <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card pq"
