--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,8 +27,10 @@
 }
 
 .text-redx{
-    color: red;
+    color: black;
     font-weight: 900;
+    background: white;
+    font-size: 1.1rem;
     text-transform: uppercase;
 }
 .admin-blank {
