--- a/templates/email/txt_admin.html
+++ b/templates/email/txt_admin.html
@@ -1,6 +1,15 @@
 <h5>Hello Administrator {{name}}</h5>
 
 <p><strong>With great power comes great responsibility</strong></p>
-
+<ul class="text-white" style="text-align: left;">
+    <li style="font-size: small;">You can add residents to the neighbourhood map(click to get latitude and
+        longitude first and add resident's home location accordingly) - The <strong class="text-redx p-1">login</strong>
+        credentials will be
+        <strong class="text-redx p-1">auto-generated</strong> and sent to the added resident
+        through the <strong class="text-redx p-1">Email</strong> entered</li>
+    <li style="font-size: small;">You can add social services to the neighbourhood map</li>
+    <li style="font-size: small;">You can send alerts to the residents</li>
+    <li style="font-size: small;">You can delete any post incase it doesn't meet the set standards</li>
+    <li style="font-size: small;"></i> You can edit or delete the neighbourhood</li>
+</ul>
 <p>Account created successfully</p>
-
