--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -66,13 +66,12 @@
             <p style="font-size: large; width: max-content;" class="bg-dark p-1">As an administrator, you get to:</p>
             <ul class="text-white" style="text-align: left;">
                 <li style="font-size: small;">You can add residents to the neighbourhood map(click to get latitude and
-                    longitude first and add resident's home location accordingly) - The <strong class="text-redx p-1">login</strong> credentials will be
+                    longitude first and add resident's home location accordingly) - The <strong
+                        class="text-redx p-1">login</strong> credentials will be
                     <strong class="text-redx p-1">auto-generated</strong> and sent to the added resident
                     through the <strong class="text-redx p-1">Email</strong> entered</li>
-                <li style="font-size: small;">You can add social services to the neighbourhood map</li>
-                <li style="font-size: small;">You can send alerts to the residents</li>
-                <li style="font-size: small;">You can delete any post incase it doesn't meet the set standards</li>                
-                <li style="font-size: small;"></i> You can edit or delete the neighbourhood</li>
+                <li style="font-size: small;">You can add social services to the neighbourhood map.</li>
+                <li style="font-size: small;">You can send alerts to the residents and delete any malicious post.</li>
             </ul>
             <p style="font-size: large; width: max-content;" class="bg-dark p-1">Basic Map Instructions</p>
             <ul style="text-align: left;">
@@ -84,16 +83,12 @@
                 <li style="font-size: small; list-style: armenian;" class="text-white"><i class="fa fa-credit-card pq"
                         aria-hidden="true"></i> represents a bank, <i class="fa fa-home pq" aria-hidden="true"></i>
                     represents the Headquarters,
-                    <br>
                     <i class="fa fa-shopping-cart pq" aria-hidden="true"></i> represents a Business, <i
                         class="fa fa-user pq" aria-hidden="true"></i> represents a Resident,
-                    <br>
                     <i class="fa fa-flag pq" aria-hidden="true"></i> represents a Police Post, <i class="fa fa-book pq"
                         aria-hidden="true"></i>
                     represents a School,
-                    <br>
                     <i class="fa fa-heart pq" aria-hidden="true"></i> represents a Hospital.
-
                 </li>
             </ul>
         </div>
